# CareerPilot

./: .editorconfig  .gitignore  CareerPilot_Overview.md  PROGRESS.md  README.md  Report_Chapter4_Implementation.md  compose.yaml
backend/: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  compose.db-init.yaml  compose.yaml  config.py  main.py  pyproject.toml  test_flow.py  test_resume.txt
backend/migrations/: env.py
backend/migrations/versions/: 1575ab5b6621_create_auth_tables.py  246265422bb9_create_market_data_tables.py  45e117c1cbfb_create_wave_6_tables.py  4990fdb25893_create_wave_7_tables.py  4aa27483b44a_create_wave_10_tables.py  71851897f519_create_career_profile_tables.py  8a5b2549d305_test_blank_migration.py  90c09ec38235_create_wave_5_tables.py  bb2b3a05cd78_create_wave_8_tables.py
backend/seeds/: indeed_session.json
backend/src/app/: main.py
backend/src/app/assets/: __init__.py  index.html
backend/src/app/core/: config.py  logging.py
backend/src/app/infrastructure/: __init__.py
backend/src/app/middleware/: metrics.py  rate_limit.py  request_id.py
backend/src/app/schemas/: agent.py  auth.py  chat.py  evaluation.py  health.py  intelligence.py  market_graph.py  observability.py  profile.py  resume.py
backend/src/app/services/: analysis_service.py  application_workflow_service.py  ats_integration_service.py  ats_service.py  auth_service.py  automation_service.py  benchmark_calculator_service.py  browser_fallback_execution_service.py  calibration_model_service.py  career_graph_analytics_service.py  career_health_service.py  chat_service.py  company_intelligence_service.py  compensation_extraction_service.py  dashboard_service.py  database_service.py  deterministic_form_execution_service.py  documentation_service.py  evaluation_agent_service.py  evaluation_framework_service.py  gap_aware_retrieval_engine.py  (+30 more)
backend/src/scripts/: example_usage.py  locustfile.py  parse_resume.py  pdf_to_md.py  test_new_architecture.py  test_pdf_processing.py
backend/src/tests/: test_agent_system.py  test_auth.py  test_calibration.py  test_execution_engine.py  test_foundation.py  test_intelligence_dashboard.py  test_market.py  test_profile.py  test_reliability_observability.py  test_strategy_graph_digest.py
(+253 files in other folders)
